# Computer-Vision-w-th-Robotic-Projects

./: README.md
LıneDetectıon with RaspberryPi/: LineDetectionRobot.py
TrafficSignDetection_HOG_SVM/: Detection.ipynb  resize.ipynb
weather_classification_ml_cv/adastec_weather_cls/: main.py
weather_classification_ml_cv/adastec_weather_cls/process/: dataset.py  feature_extractor.py  image_analysing.py  model.py  preprocessing.py  visualization.py
weather_classification_ml_cv/adastec_weather_cls/train_test/: cloud_rain_cls.py  cloud_rain_test.py  sun_cloud_cls.py  sun_cloud_rain_cls.py  sun_cloud_test.py  sun_rain_cls.py  sun_rain_test.py
weather_classification_ml_cv/adastec_weather_cls/weights/: cloud_rain_wghts_adabostDT.sav  sun_cloud__rain_wghts_adabostDT.sav  sun_cloud_wghts_adabostDT.sav  sun_rain_wghts_adabostDT.sav
weather_classification_v2/adastec_weather_cls/: main.py
weather_classification_v2/adastec_weather_cls/process/: feature_extractor.py  image_analysing.py  preprocessing.py
weather_classification_v2/weather_ros/src/bag2dataset/: CMakeLists.txt  package.xml
weather_classification_v2/weather_ros/src/bag2dataset/launch/: bag2dataset_sunny.launch
weather_classification_v2/weather_ros/src/classification/: CMakeLists.txt
weather_classification_v2/weather_ros/src/classification/launch/: adastec_classification.launch
weather_classification_v2/weather_ros/src/classification/src/: weather_cls.py
weather_classification_v2/weather_ros/src/classification/src/process/: feature_extractor.py
(+19 files in other folders)
