cmake_minimum_required(VERSION 3.0.2)
project(bag2dataset)


find_package(catkin REQUIRED COMPONENTS
  rospy
  std_msgs
)


catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES bag2video
#  CATKIN_DEPENDS rospy std_msgs
#  DEPENDS system_lib
)


include_directories(
# include
  ${catkin_INCLUDE_DIRS}
)

catkin_install_python(PROGRAMS src/bag2dataset.py
	DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

catkin_install_python(PROGRAMS src/rename_topic.py
	DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)